--- a/HW9/9.2.html
+++ b/HW9/9.2.html
@@ -11,7 +11,7 @@
             function fillingWithCorrectData (text) {
             
                 let number;
-                count = 0;
+                let count = 0;
                 do {
                     number = +prompt(text);
                     count++;
