--- a/HW9/9.2.html
+++ b/HW9/9.2.html
@@ -5,13 +5,13 @@
         вывести сначала L – длину кратчайшего пути (количество ребер, которые
         нужно пройти), а затем сам путь. Если пути нет, нужно вывести -1.    
         <script>
-            //'use strict'
+            'use strict'
            
             //проверка на корректность введенных данных
             function fillingWithCorrectData (text) {
             
                 let number;
-                count = 0;
+                let count = 0;
                 do {
                     number = +prompt(text);
                     count++;
