--- a/HW10/10.2.html
+++ b/HW10/10.2.html
@@ -18,10 +18,10 @@
                     this.interest = interest;    
                 }
                 putFunds(funds) {
-                    this.sum += funds  
+                    this.sum += funds;  
                 }
                 chargeInterest() {
-                    this.sum *= this.interest 
+                    this.sum *= this.interest; 
                 }
             }
 
