--- a/HW10/10.1.html
+++ b/HW10/10.1.html
@@ -16,13 +16,12 @@
                     this.days = days;    
                 }
                 getSalary() {
-                    console.log(this.rate * this.days)
+                    console.log(this.rate * this.days);
                 }
             }
 
             let worker = new Worker("Adam", "Beck", 1.5, 10);
-
-
+            
         </script>
     </head>
     <body>		
