--- a/HW10/10.1.html
+++ b/HW10/10.1.html
@@ -8,6 +8,7 @@
         Также класс должен иметь метод getSalary(), который будет выводить зарплату работника. 
         Зарплата - это произведение (умножение) ставки rate на количество отработанных дней days.    
         <script>
+            'use strict'
             class Worker {
                 constructor(name, surname, rate, days) {
                     this.name = name;
@@ -21,7 +22,7 @@
             }
 
             let worker = new Worker("Adam", "Beck", 1.5, 10);
-            
+
         </script>
     </head>
     <body>		
