--- a/HW10/10.2.html
+++ b/HW10/10.2.html
@@ -10,6 +10,7 @@
         начислить проценты. 
         Создайте массив элементов класса "банковский счёт"    
         <script>
+            'use strict'
             class BankAccount {
                 constructor(number, holder, sum, interest) {
                     this.number = number;
