--- a/HW11/11.2.html
+++ b/HW11/11.2.html
@@ -14,7 +14,7 @@
                     hash += string.charCodeAt(i);  
                 }
                 hash %= 256;
-                return hash.toString(numSystem);; 
+                return hash.toString(numSystem); 
                 
             }
 
